tests/unit/default/syntax-error/165-alter-table-dot-name-type.x.t
---- IN ----
*%table.name:int|
---- OUT ----
---- ERR ----
syntax: expected `=>` after `*%table.name:int` near `|` at position 16 - at line 1
---- EXIT ----
1
